--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -1,4 +1,24 @@
 .header {
   height: 6.5rem;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .1);
+
+  .wrap {
+    position: relative;
+    height: 100%;
+    max-width: 1450px;
+    margin: 0 auto;
+
+    .logo {
+      width: 13.0rem;
+      position: absolute;
+      top: 50%; left: 10px;
+      transform: translateY(-50%);
+
+      img {
+        display: block;
+        width: 100%;
+        margin: 0;
+      }
+    }
+  }
 }
