--- a/src/default.scss
+++ b/src/default.scss
@@ -4,9 +4,15 @@ html {
 
 html,
 body {
-  height: 100%;
   margin: 0;
   padding: 0;
+}
+
+html,
+body,
+#root,
+.App {
+  height: 100%;
 }
 
 *, ::before, ::after {
@@ -22,8 +28,17 @@ body {
 
 a {
   text-decoration: none;
+  cursor: pointer;
 }
 
 a, a:hover {
   transition: all .4s ease-in-out;
+}
+
+.main {
+  width: 100%;
+  height: calc(100% - 6.5rem);
+  max-width: 1450px;
+  padding: 0 10px;
+  margin: 0 auto;
 }
