--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -20,5 +20,28 @@
         margin: 0;
       }
     }
+
+    .callToActions {
+      position: absolute;
+      top: 50%; right: 10px;
+      transform: translateY(-50%);
+
+      ul, li {
+        margin: 0;
+        padding: 0;
+      }
+
+      li {
+        list-style-type: none;
+
+        a {
+          font-size: 1.8rem;
+          line-height: 1;
+          color: black;
+          text-decoration: none;
+          text-transform: uppercase;
+        }
+      }
+    }
   }
 }
