--- a/src/components/SignIn/styles.scss
+++ b/src/components/SignIn/styles.scss
@@ -1,27 +1,13 @@
-.signin {
+.socialSignin {
+  margin: .5rem auto 0;
+}
+
+.links {
   display: block;
   width: 100%;
-  max-width: 40.0rem;
-  margin: 4rem auto 6rem;
-  border: 1px solid black;
+  margin: .5rem auto 0;
 
-  .wrap {
-    padding: 10px;
-
-    h2 {
-      font-size: 2.2rem;
-      line-height: 1;
-      font-weight: 400;
-      text-transform: uppercase;
-      text-align: center;
-      display: block;
-      width: 100%;
-      padding: 0;
-      margin: 0 auto;
-    }
-
-    .socialSignin {
-      margin: 3rem auto 0;
-    }
+  a {
+    color: black;
   }
 }
